--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   equatable: ^2.0.5
   internet_connection_checker: ^0.0.1+4
   flutter_bloc: ^8.1.1
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
