--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   internet_connection_checker: ^0.0.1+4
   flutter_bloc: ^8.1.1
   get_it: ^7.2.0
+  flutter_native_splash: ^2.2.9
 
 dev_dependencies:
   flutter_test:
